Fix venue header: Update navbar and footer to match dark mode styling, add conditional navbar transparency for home route

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,6 @@ body.light-mode {
 body.dark-mode {
   background-color: $dm-main-color;
   color: #dfdfdf;
-  .navbar,
   .nav-small {
     //background-color: rgba(27, 42, 59, .8)
     background-color: rgb(16, 23, 29);
